# bev-3d-multi-object-tracking

./: .pre-commit-config.yaml  README.md  pyproject.toml
bev_3d_multi_object_tracking/: cost_functions.py  multi_object_tracker.py
bev_3d_multi_object_tracking/core/: base_data_association.py  base_filter.py  detected_object_3d.py  geometry_utils.py  tracklet.py
bev_3d_multi_object_tracking/data_association/: cost_matrix_based_association.py
bev_3d_multi_object_tracking/evaluation/: mot_evaluator.py
bev_3d_multi_object_tracking/filters/: vehicletracker.py
bev_3d_multi_object_tracking/io/: base_parser.py  base_serializer.py  dict_parser.py  dict_serializer.py  kitti_parser.py
docs/: index.html
docs/js/: app.js  visualizer.js
docs/py/: demo_tracker.py
scenarios/: synthetic_generator.py
tests/: test_cost_functions.py  test_costmatrix_association.py  test_detected_objects.py  test_io.py  test_kitti_parser.py  test_mot_evaluator.py  test_multi_object_tracker.py  test_synthetic_generator.py  test_tracklet.py  test_vehicle_tracker.py
tests/fixtures/: kitti_sample.txt
