[tool.poetry]
name = "bev-3d-mot"
version = "0.1.0"
description = "3D multi object tracking for bev space"
authors = ["yoshiri <yoshiyoshidetteiu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pyyaml = "^6.0.2"
lark = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
