[tool.poetry]
name = "bev_3d_multi-object-tracking"
version = "0.1.0"
description = "3D multi object tracking for bev space"
authors = ["yoshiri <yoshiyoshidetteiu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "<8.1.0"
numpy = "^2.2.1"
scipy = "^1.14.1"


[tool.poetry.group.dev.dependencies]
pyyaml = "^6.0.2"
lark = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
